Treetable: Correctly truncate text, if text-truncate is set

--- a/src/clr-addons/treetable/treetable.scss
+++ b/src/clr-addons/treetable/treetable.scss
@@ -256,6 +256,7 @@
             flex: 1 1 auto;
             flex-flow: row nowrap;
             position: relative;
+            overflow: hidden;
 
             .treetable-cell {
               text-align: left;
